--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         font-family: "Syne", sans-serif;
         margin: 0;
         padding: 0;
-        background-color: beige;
+        background-color: white;
     }
     h1 {
         margin-top: 20px;
