--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     h1 {
         margin-top: 20px;
         text-align: center;
+        font-size: 300px;
     }
     p {
         margin: 10px;
+        font-family: "Inter Tight", sans-serif;
     }
     .container {
         font-family: "Inter Tight", sans-serif;
@@ -55,6 +57,9 @@
     center {
         display: block;
     }
+    #hex {
+        font-size: 50px;
+    }
     /* Media query for smaller screens */
     @media screen and (max-width: 600px) {
         h1 {
@@ -75,13 +80,16 @@
     </div>
     <button id="colorButton">Change Color</button>
     <img class="img" src="photo.jpg" alt="Placeholder Image">
+    <p id="hex"></p>
 </center>
 <script>
     var button = document.getElementById("colorButton");
+    var hexp = document.getElementById("hex");
 
     button.addEventListener("click", function() {
         var randomColor = '#' + Math.floor(Math.random()*16777215).toString(16);
         button.style.backgroundColor = randomColor;
+        hexp.innerText = randomColor;
         // alert("hello");
     });
     button.addEventListener("hover", function() {
