--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
     #hex {
         font-size: 50px;
     }
+    #head{
+        background-color: #fff;
+        border-radius: 30px;
+    }
+    #headh1{
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 50px;
+        padding-right: 50px;
+    }
     /* Media query for smaller screens */
     @media screen and (max-width: 600px) {
         h1 {
@@ -68,7 +78,9 @@
 </style>
 </head>
 <body>
-    <h1>Welcome to my Website</h1>
+    <div id="head">
+        <h1 id="headh1">Welcome to my Website</h1>
+    </div>
     <div class="container">
         <p>This is a simple HTML page with headers, paragraphs, and CSS styling.</p>
     </div>
