--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     #head{
         background-color: #fff;
         border-radius: 30px;
+        max-width: 850px;
     }
     #headh1{
         padding-top: 10px;
