--- a/index.html
+++ b/index.html
@@ -42,15 +42,16 @@
     }
     button {
         padding: 10px 20px;
-        background-color: #007bff;
-        color: #fff;
+        background-color: #FFFFFF;
+        color: #000;
         border: none;
         border-radius: 15px;
         cursor: pointer;
         display: block;
     }
     button:hover {
-        background-color: #0056b3;
+        background-color: #000000;
+        color: #fff;
     }
     center {
         display: block;
