--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
         padding-left: 50px;
         padding-right: 50px;
     }
+    #yourcolor{
+        color: #fff;
+        font-size: 50px;
+    }
     /* Media query for smaller screens */
     @media screen and (max-width: 600px) {
         h1 {
@@ -85,15 +89,16 @@
     </div>
 </center>
     <div class="container">
-        <p>This is a simple HTML page with headers, paragraphs, and CSS styling.</p>
+        <p>Click this button</p>
     </div>
     <center>
-    <div id="container">
+    <!-- <div id="container">
         <p>uses an id</p>
         <p>on the same line</p>
-    </div>
+    </div> -->
     <button id="colorButton">Change Color</button>
-    <img class="img" src="photo.jpg" alt="Placeholder Image">
+    <!-- <img class="img" src="photo.jpg" alt="Placeholder Image"> -->
+    <p id="yourcolor">Color Chosen</p>
     <p id="hex"></p>
 </center>
 <script>
