--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap');
     body {
-        font-family: "Syne", sans-serif;
+        font-family: "Inter Tight", sans-serif;
         margin: 0;
         padding: 0;
     }
