--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     @import url('https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap');
     body {
-        font-family: "Inter Tight", sans-serif;
+        font-family: "Syne", sans-serif;
         margin: 0;
         padding: 0;
+        font-weight: 500;
     }
     h1 {
         margin-top: 20px;
